--- a/frontendmentor/component/chat-app-css-illustration-master/index.html
+++ b/frontendmentor/component/chat-app-css-illustration-master/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./styles/main.css" />
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor | yuenu</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -30,121 +30,187 @@
       <section class="container">
         <div class="illustration">
           <div class="illustration__container">
-            <div class="illustration__wrapper">
-              <header class="illustration__header">
-                <span class="illustration__back"></span>
-                <div class="user">
-                  <div class="user__avatar">
-                    <img src="./images/avatar.jpg" alt="" />
-                  </div>
-                  <div class="user__info">
-                    <h1 class="user_name">Samuel Green</h1>
-                    <p class="user__state">Available to Walk</p>
-                  </div>
-                </div>
-                <span class="illustration__more">
-                  <svg
-                    version="1.1"
-                    id="Capa_1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    x="0px"
-                    y="0px"
-                    viewBox="0 0 60 60"
-                    style="enable-background: new 0 0 60 60"
-                    xml:space="preserve"
-                  >
-                    <g>
-                      <path
-                        d="M30,16c4.411,0,8-3.589,8-8s-3.589-8-8-8s-8,3.589-8,8S25.589,16,30,16z"
-                      />
-                      <path
-                        d="M30,44c-4.411,0-8,3.589-8,8s3.589,8,8,8s8-3.589,8-8S34.411,44,30,44z"
-                      />
-                      <path
-                        d="M30,22c-4.411,0-8,3.589-8,8s3.589,8,8,8s8-3.589,8-8S34.411,22,30,22z"
-                      />
-                    </g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                  </svg>
-                  <ul class="more">
-                    <li>Setiings</li>
-                    <li>Sign out</li>
-                  </ul>
-                </span>
-              </header>
+            <div class="illustration__box">
+              <div class="illustration__wrapper">
+                <div class="illustration__contact">
+                  <header class="illustration__contact-header">
+                    <span>
+                      BOOKING
+                    </span>
+                    <img src="" alt="">
+                  </header>
+                  <div class="illustration__contact-body">
+                    <div class="illustration__contact-provider">
+                      <label for="">Provider</label>
+                      <ul class="illustration__contact-provider-list">
+                        <li>
+                          <img src="./images/avatar.jpg" alt="">
+                          <h6>Samuel</h6>
+                        </li>
+                        <li>
+                          <img src="./images/provider-2.webp" alt="">
+                          <h6 >Mary</h6>
+                        </li>
+                        <li>
+                          <img src="./images/provider-3.webp" alt="">
+                          <h6 >Vix</h6>
+                        </li>
+                        <li>
+                          <img src="./images/provider-4.webp" alt="">
+                          <h6 >John</h6>
+                        </li>
+                      </ul>
+                    </div>
+                    <ul class="illustration__contact-message">
+                      <li>
+                        <img src="./images/avatar.jpg" alt="">
+                        <div class="illustration__contact-message-content">
+                          <div class="illustration__contact-message-title">
+                            <h4>Samuel Green</h4>
+                            <span>Just Now</span>
+                          </div>
+                          <div class="illustration__contact-message-description">
+                            ** Provided you a plan **
+                          </div>
+                        </div>
+                      </li>
 
-              <div class="illustration__body">
-                <div class="row">
-                  <div class="text">
-                    That sounds great. I’d be happy with that.
+                      <li>
+                        <img src="./images/provider-2.webp" alt="">
+                        <div class="illustration__contact-message-content">
+                          <div class="illustration__contact-message-title">
+                            <h4>Mary</h4>
+                            <span>Yesterday</span>
+                          </div>
+                          <div class="illustration__contact-message-description">
+                            Thank you for your service 💓
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="text">
-                    Could you send over some pictures of your dog, please?
-                  </div>
-                </div>
-                <div class="media sent">
-                  <img src="./images/dog-image-1.jpg" alt="" />
-                  <img src="./images/dog-image-2.jpg" alt="" />
-                  <img src="./images/dog-image-3.jpg" alt="" />
-                </div>
-                <div class="row sent">
-                  <div class="text">
-                    Here are a few pictures. She’s a happy girl!
-                  </div>
-                </div>
-                <div class="row sent">
-                  <div class="text">Can you make it?</div>
-                </div>
-
-                <div class="row">
-                  <div class="text">
-                    She looks so happy! The time we discussed works. How long
-                    shall I take her out for?
-                  </div>
-                </div>
-
-                <div class="row plan">
-                  <div class="offer">
-                    <input type="radio" name="plan" id="plan1" value="29" />
-                    <label for="plan1">
-                      <span class="offer__text">30 minute walk</span>
-                      <span class="offer__price">$29</span>
-                    </label>
-                  </div>
-                </div>
-
-                <div class="row plan">
-                  <div class="offer">
-                    <input type="radio" name="plan" value="49" id="plan2" />
-                    <label for="plan2">
-                      <span class="offer__text">1 hour walk</span>
-                      <span class="offer__price">$49</span>
-                    </label>
-                  </div>
+                  
                 </div>
               </div>
-
-              <footer class="illustration__footer">
-                <input type="text" placeholder="Type a message…" />
-                <button type="submit" role="submit"></button>
-              </footer>
+              <div class="illustration__wrapper">
+                <div class="illustration__message">
+                  <header class="illustration__header">
+                    <span class="illustration__back"></span>
+                    <div class="user">
+                      <div class="user__avatar">
+                        <img src="./images/avatar.jpg" alt="" />
+                      </div>
+                      <div class="user__info">
+                        <h1 class="user_name">Samuel Green</h1>
+                        <p class="user__state">Available to Walk</p>
+                      </div>
+                    </div>
+                    <span class="illustration__more">
+                      <svg
+                        version="1.1"
+                        id="Capa_1"
+                        xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px"
+                        y="0px"
+                        viewBox="0 0 60 60"
+                        style="enable-background: new 0 0 60 60"
+                        xml:space="preserve"
+                      >
+                        <g>
+                          <path
+                            d="M30,16c4.411,0,8-3.589,8-8s-3.589-8-8-8s-8,3.589-8,8S25.589,16,30,16z"
+                          />
+                          <path
+                            d="M30,44c-4.411,0-8,3.589-8,8s3.589,8,8,8s8-3.589,8-8S34.411,44,30,44z"
+                          />
+                          <path
+                            d="M30,22c-4.411,0-8,3.589-8,8s3.589,8,8,8s8-3.589,8-8S34.411,22,30,22z"
+                          />
+                        </g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                      </svg>
+                      <ul class="more">
+                        <li><a href="#settings">SETTINGS</a></li>
+                        <li><a href="#signout">SIGN OUT</a></li>
+                      </ul>
+                    </span>
+                  </header>
+  
+                  <div class="illustration__body">
+                    <div class="row">
+                      <div class="text">
+                        That sounds great. I’d be happy with that.
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="text">
+                        Could you send over some pictures of your dog, please?
+                      </div>
+                    </div>
+                    <div class="media sent">
+                      <img src="./images/dog-image-1.jpg" alt="" />
+                      <img src="./images/dog-image-2.jpg" alt="" />
+                      <img src="./images/dog-image-3.jpg" alt="" />
+                    </div>
+                    <div class="row sent">
+                      <div class="text">
+                        Here are a few pictures. She’s a happy girl!
+                      </div>
+                    </div>
+                    <div class="row sent">
+                      <div class="text">Can you make it?</div>
+                    </div>
+  
+                    <div class="row">
+                      <div class="text">
+                        She looks so happy! The time we discussed works. How long
+                        shall I take her out for?
+                      </div>
+                    </div>
+  
+                    <div class="row plan">
+                      <div class="offer">
+                        <input type="radio" name="plan" id="plan1" value="29" />
+                        <label for="plan1">
+                          <span class="offer__text">30 minute walk</span>
+                          <span class="offer__price">$29</span>
+                        </label>
+                      </div>
+                    </div>
+  
+                    <div class="row plan">
+                      <div class="offer">
+                        <input type="radio" name="plan" value="49" id="plan2" />
+                        <label for="plan2">
+                          <span class="offer__text">1 hour walk</span>
+                          <span class="offer__price">$49</span>
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+  
+                  <footer class="illustration__footer">
+                    <input type="text" placeholder="Type a message…" />
+                    <button type="submit" role="submit"></button>
+                  </footer>
+                </div>
+              </div>
+              
             </div>
           </div>
         </div>
