feat: add char-app page

--- a/frontendmentor/component/chat-app-css-illustration-master/index.html
+++ b/frontendmentor/component/chat-app-css-illustration-master/index.html
@@ -34,62 +34,101 @@
               <div class="illustration__wrapper">
                 <div class="illustration__contact">
                   <header class="illustration__contact-header">
-                    <span>
-                      BOOKING
+                    <h3> BOOKING </h3>
+                    <span class="illustration__contact-search">
+                      <svg
+                        version="1.1"
+                        id="Capa_1"
+                        xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px"
+                        y="0px"
+                        viewBox="0 0 487.95 487.95"
+                        style="enable-background: new 0 0 487.95 487.95"
+                        xml:space="preserve"
+                      >
+                        <g>
+                          <g>
+                            <path
+                              d="M481.8,453l-140-140.1c27.6-33.1,44.2-75.4,44.2-121.6C386,85.9,299.5,0.2,193.1,0.2S0,86,0,191.4s86.5,191.1,192.9,191.1
+			c45.2,0,86.8-15.5,119.8-41.4l140.5,140.5c8.2,8.2,20.4,8.2,28.6,0C490,473.4,490,461.2,481.8,453z M41,191.4
+			c0-82.8,68.2-150.1,151.9-150.1s151.9,67.3,151.9,150.1s-68.2,150.1-151.9,150.1S41,274.1,41,191.4z"
+                            />
+                          </g>
+                        </g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                        <g></g>
+                      </svg>
+                      <input type="text">
                     </span>
-                    <img src="" alt="">
                   </header>
                   <div class="illustration__contact-body">
                     <div class="illustration__contact-provider">
                       <label for="">Provider</label>
                       <ul class="illustration__contact-provider-list">
                         <li>
-                          <img src="./images/avatar.jpg" alt="">
+                          <img src="./images/avatar.jpg" alt="" />
                           <h6>Samuel</h6>
                         </li>
                         <li>
-                          <img src="./images/provider-2.webp" alt="">
-                          <h6 >Mary</h6>
+                          <img src="./images/provider-2.webp" alt="" />
+                          <h6>Mary</h6>
                         </li>
                         <li>
-                          <img src="./images/provider-3.webp" alt="">
-                          <h6 >Vix</h6>
+                          <img src="./images/provider-3.webp" alt="" />
+                          <h6>Vix</h6>
                         </li>
                         <li>
-                          <img src="./images/provider-4.webp" alt="">
-                          <h6 >John</h6>
+                          <img src="./images/provider-4.webp" alt="" />
+                          <h6>John</h6>
                         </li>
                       </ul>
                     </div>
                     <ul class="illustration__contact-message">
-                      <li>
-                        <img src="./images/avatar.jpg" alt="">
+                      <li data-provider="samuel">
+                        <img src="./images/avatar.jpg" alt="" />
                         <div class="illustration__contact-message-content">
                           <div class="illustration__contact-message-title">
                             <h4>Samuel Green</h4>
                             <span>Just Now</span>
                           </div>
-                          <div class="illustration__contact-message-description">
+                          <div
+                            class="illustration__contact-message-description"
+                          >
                             ** Provided you a plan **
                           </div>
                         </div>
                       </li>
 
-                      <li>
-                        <img src="./images/provider-2.webp" alt="">
+                      <li data-provider="mary">
+                        <img src="./images/provider-2.webp" alt="" />
                         <div class="illustration__contact-message-content">
                           <div class="illustration__contact-message-title">
-                            <h4>Mary</h4>
+                            <h4>Mary key</h4>
                             <span>Yesterday</span>
                           </div>
-                          <div class="illustration__contact-message-description">
-                            Thank you for your service 💓
+                          <div
+                            class="illustration__contact-message-description"
+                          >
+                          Thank you 💓💓💓
                           </div>
                         </div>
                       </li>
                     </ul>
                   </div>
-                  
                 </div>
               </div>
               <div class="illustration__wrapper">
@@ -101,7 +140,7 @@
                         <img src="./images/avatar.jpg" alt="" />
                       </div>
                       <div class="user__info">
-                        <h1 class="user_name">Samuel Green</h1>
+                        <h1 class="user__name">Samuel Green</h1>
                         <p class="user__state">Available to Walk</p>
                       </div>
                     </div>
@@ -150,7 +189,7 @@
                       </ul>
                     </span>
                   </header>
-  
+
                   <div class="illustration__body">
                     <div class="row">
                       <div class="text">
@@ -175,14 +214,14 @@
                     <div class="row sent">
                       <div class="text">Can you make it?</div>
                     </div>
-  
+
                     <div class="row">
                       <div class="text">
-                        She looks so happy! The time we discussed works. How long
-                        shall I take her out for?
+                        She looks so happy! The time we discussed works. How
+                        long shall I take her out for?
                       </div>
                     </div>
-  
+
                     <div class="row plan">
                       <div class="offer">
                         <input type="radio" name="plan" id="plan1" value="29" />
@@ -192,7 +231,7 @@
                         </label>
                       </div>
                     </div>
-  
+
                     <div class="row plan">
                       <div class="offer">
                         <input type="radio" name="plan" value="49" id="plan2" />
@@ -203,14 +242,13 @@
                       </div>
                     </div>
                   </div>
-  
+
                   <footer class="illustration__footer">
                     <input type="text" placeholder="Type a message…" />
                     <button type="submit" role="submit"></button>
                   </footer>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
