--- a/frontendmentor/component/chat-app-css-illustration-master/styles/main.scss
+++ b/frontendmentor/component/chat-app-css-illustration-master/styles/main.scss
@@ -25,11 +25,11 @@ image {
 body {
   font-size: 16px;
   font-family: "Rubik", sans-serif;
+  width: 100%;
   min-height: 100vh;
   background-color: var(--color-bg);
   overflow-x: hidden;
   position: relative;
-  background-position: right 48vw bottom 50vh, left 50vw top 50vh;
 
   &::before {
     content: "";
@@ -39,28 +39,14 @@ body {
       hsl(264, 100%, 61%)
     );
     background-repeat: no-repeat;
-    background-size: 100%;
-    width: 40rem;
+    width: 36rem;
+    // width: min(40vw, 900px);
     height: 100vh;
     position: absolute;
     top: -10%;
-    left: -10vw;
+    left: -10rem;
     z-index: -1;
-    border-radius: 0 0 50% 50%;
-  }
-
-  &::after {
-    content: "";
-    background: hsl(270, 8%, 91%);
-    background-repeat: no-repeat;
-    width: 40rem;
-    height: 90vh;
-    position: absolute;
-    right: -9vw;
-    bottom: 0;
-    background-position: left -9vw top -10%;
-    z-index: -1;
-    border-radius: 50% 50% 0 0;
+    border-radius: 0 0 48% 51%;
   }
 }
 
@@ -69,25 +55,39 @@ main {
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+
+  &::before {
+    content: "";
+    background: hsl(270, 8%, 91%);
+    background-repeat: no-repeat;
+    width: 40rem;
+    height: 80vh;
+    position: absolute;
+    right: -17%;
+    bottom: 0;
+    z-index: -1;
+    border-radius: 50% 55% 0 0;
+  }
 }
 
 .container {
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 100%;
+  gap: 9rem;
 }
 
 .illustration {
-  width: 50%;
   height: 100%;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &__container {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-
     width: 22rem;
     height: 41rem;
     background-color: var(--color-white);
@@ -313,6 +313,7 @@ main {
       border-radius: 14px 10px 3px 14px;
       box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
       color: hsl(271, 36%, 24%);
+      word-break: break-all;
     }
 
     .row.plan {
@@ -476,132 +477,195 @@ main {
     flex-direction: column;
 
     &-header {
-      font-size:1.2rem;
+      font-size: 1.2rem;
       color: var(--color-white);
-      background-image: linear-gradient(to right, #9fcfe4, #e7c7a4);
+      background-image: linear-gradient(to right, #a66efa, #e75afa);
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+
+      h3 {
+        margin-bottom: 3px;
+      }
+    }
+
+    &-search {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      cursor: pointer;
+      transition: 200ms;
+      position: relative;
+      width: 2rem;
+      height: 2rem;
+      cursor: pointer;
+      user-select: none;
+
+      svg {
+        width: 16px;
+        fill: #000000;
+        position: absolute;
+        right: 8px;
+
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+
+      input {
+        border: 0;
+        border-radius: 50px;
+        height: 2rem;
+        width: 2rem;
+        transition: 200ms;
+        padding-left: 10px;
+      }
     }
 
     &-body {
       height: calc(41rem - 1.6rem - 6rem);
       padding: 10px 20px;
-      display:flex;
+      display: flex;
       flex-direction: column;
       user-select: none;
     }
 
     &-provider {
-      
       border-bottom: 2px solid rgb(231, 231, 231);
 
       label {
-        margin-top:5px;
-        color:#bbb;
-        font-size:14px;
-        font-weight:700;
+        margin-top: 5px;
+        color: #bbb;
+        font-size: 14px;
+        font-weight: 700;
       }
     }
 
     &-provider-list {
       padding: 10px 20px 20px;
-      display:flex;
+      display: flex;
       align-items: center;
       justify-content: center;
       list-style-type: none;
-      
+
       li {
         cursor: pointer;
         padding: 10px;
-        border-radius:5px;
+        border-radius: 5px;
         transition: 200ms;
+        position: relative;
 
         &:hover {
           background-color: rgb(223, 223, 223);
         }
+
+        &::after {
+          content: "";
+          position: absolute;
+          top: 52px;
+          right: 15px;
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          outline: 2px solid #f5f3f7;
+          background: green;
+        }
+
+        &:nth-of-type(3)::after {
+          background: rgb(231, 212, 42);
+        }
+
+        &:nth-of-type(4)::after {
+          background: red;
+        }
       }
-      
+
       img {
-        width:54px;
-        height:54px;
+        width: 54px;
+        height: 54px;
         object-fit: cover;
-        border-radius:50%;
+        border-radius: 50%;
       }
 
       h6 {
-        font-weight:700;
+        font-weight: 700;
         text-align: center;
-        margin-top:5px;
+        margin-top: 5px;
       }
     }
 
     &-message {
-      padding:1rem 0;
+      padding: 1rem 0;
 
       li {
-        padding:10px;
-        display:flex;
-        gap:15px;
-        position:relative;
+        padding: 10px;
+        display: flex;
+        gap: 15px;
+        position: relative;
         cursor: pointer;
-        border-radius:8px;
+        border-radius: 8px;
 
         &:hover {
           background-color: rgb(223, 223, 223);
         }
 
         &::before {
-          content:'';
-          width:10px;
-          height:10px;
+          content: "";
+          width: 10px;
+          height: 10px;
           background: green;
-          position:absolute;
-          bottom:12px;
-          left:48px;
-          border-radius:50%;
+          position: absolute;
+          bottom: 12px;
+          left: 48px;
+          border-radius: 50%;
           outline: 2px solid #f5f3f7;
         }
       }
 
       img {
-        width:54px;
-        height:54px;
+        width: 54px;
+        height: 54px;
         object-fit: cover;
-        border-radius:50%;
+        border-radius: 50%;
       }
     }
 
     &-message-content {
-      display:flex;
-      flex:1;
+      display: flex;
+      flex: 1;
       flex-direction: column;
       justify-content: space-around;
-      padding:4px 0;
+      padding: 4px 0;
     }
 
-    &-message-title{
-      font-weight:700;
-      font-size:1rem;
-      display:flex;
+    &-message-title {
+      font-weight: 700;
+      font-size: 1rem;
+      display: flex;
       align-items: center;
       justify-content: space-between;
 
       span {
         font-weight: 400;
-        font-size:0.7rem;
-        color:var(--color-heading);
+        font-size: 0.7rem;
+        color: var(--color-heading);
       }
     }
 
-    &-message-description{
-      font-size:12px;
-      font-style:italic;
-      color:#bbb;
+    &-message-description {
+      font-size: 12px;
+      font-style: italic;
+      color: #bbb;
+      text-overflow: ellipsis;
+      max-width: 195px;
+      white-space: nowrap;
+      overflow: hidden;
     }
   }
 }
 
 .heading {
-  width: 50%;
-
   &__title {
     color: var(--color-heading);
     font-size: 2.7rem;
@@ -611,8 +675,80 @@ main {
 
   &__description {
     color: var(--color-paragrapg);
-    font-weight: 400px;
+    font-weight: 400;
     line-height: 1.7;
     max-width: 450px;
+  }
+}
+
+@media (max-width: 1280px) {
+  body {
+    &::before {
+      width: 40rem;
+      height: 50rem;
+      left: -25%;
+    }
+  }
+
+  main {
+    &::before {
+      height: 70vh;
+      width: 34rem;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    &::before {
+      top: 0;
+      left: -20%;
+      width: 27rem;
+      height: 40rem;
+      border-radius: 0 0 65% 39%;
+    }
+  }
+
+  main {
+    height: 100%;
+
+    &::before {
+      bottom: 0;
+      width: 35rem;
+      height: 40rem;
+      right: -13rem;
+      border-radius: 56% 51% 0 0;
+    }
+  }
+
+  .container {
+    flex-direction: column;
+    gap: 4rem;
+    padding: 4rem 1rem;
+  }
+
+  .heading {
+    text-align: center;
+
+    &__description {
+      max-width: 300px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    &::before {
+      width: 20rem;
+      height: 38rem;
+      border-radius: 0 0 81% 18%;
+    }
+  }
+
+  main {
+    &::before {
+      width: 25rem;
+      height: 30rem;
+    }
   }
 }
