chore: update the README

--- a/frontendmentor/component/chat-app-css-illustration-master/styles/main.scss
+++ b/frontendmentor/component/chat-app-css-illustration-master/styles/main.scss
@@ -729,9 +729,11 @@ main {
 
   .heading {
     text-align: center;
+    font-size: 2.55rem;
 
     &__description {
       max-width: 300px;
+      font-size: 1rem;
     }
   }
 }
