--- a/frontendmentor/component/chat-app-css-illustration-master/styles/main.css
+++ b/frontendmentor/component/chat-app-css-illustration-master/styles/main.css
@@ -878,9 +878,11 @@ main::before {
   }
   .heading {
     text-align: center;
+    font-size: 2.55rem;
   }
   .heading__description {
     max-width: 300px;
+    font-size: 1rem;
   }
 }
 
