add background color

--- a/frontendmentor/order-summary-component-main/style.css
+++ b/frontendmentor/order-summary-component-main/style.css
@@ -23,6 +23,7 @@ body {
 
 body {
   min-height: 100vh;
+  background: var(--blue-200);
   background-image: url(./images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
   background-size: 100%;
