feat: interactive-pricing desktop complete

--- a/frontendmentor/interactive-pricing-component-main/src/index.css
+++ b/frontendmentor/interactive-pricing-component-main/src/index.css
@@ -4,19 +4,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
-:root {
-  --toggle-background-color-on: #aaa;
-  --toggle-background-color-off: #aaa;
-  --toggle-control-on-color: blue;
-  --toggle-control-off-color: blue;
-  --toggle-width: 50px;
-  --toggle-height: 28px;
-  --toggle-gutter: 5px;
-  --toggle-radius: 50%;
-  --toggle-control-speed: 0.15s;
-  --toggle-control-ease: ease-in;
-}
-
 body {
   font-family: 'Red Hat Display', sans-serif;
   background: hsl(225, 100%, 94%);
@@ -25,40 +12,6 @@ body {
 }
 
 /* Input range START*/
-/* .range {
-  position: relative;
-  width: 100%;
-  height: 17px;
-}
-
-input[type='range'] {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  margin: 0;
-  padding: 0;
-  transform: translateY(-50%);
-  background: #eee;
-  transition: linear 0.5s;
-  outline: 0;
-}
-
-input[type='range']::-webkit-slider-thumb {
-  width: 40px;
-  -webkit-appearance: none;
-  height: 40px;
-  cursor: pointer;
-  border-radius: 50%;
-  box-shadow: 0px 0px 6px 0px #0fdac6;
-  z-index: 2;
-  position: relative;
-  margin-left: 3px;
-  margin-top: -3px;
-  background: #0fdac6 url('./assets/icon-slider.svg') no-repeat center;
-} */
 
 input[type='range'] {
   -webkit-appearance: none;
@@ -83,30 +36,8 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 input[type='range']:active::-webkit-slider-thumb {
-  box-shadow: 0 0px 50px rgba(15, 218, 198, 1);
+  background: #27aca2 url('./assets/icon-slider.svg') no-repeat center;
 }
-
-input[type='range']::-webkit-slider-thumb:before,
-input[type='range']::-webkit-slider-thumb:after {
-  position: absolute;
-  top: 3px;
-  width: 2000px; /* 長度很長沒關係，因為剛剛有用 overflow:hidden 了 */
-  height: 4px;
-  content: '';
-  pointer-events: none; /* 讓滑鼠可以點擊穿透偽元素，不然會點不到下面 */
-  transition: 0.2s;
-}
-
-input[type='range']::-webkit-slider-thumb:before {
-  left: -1997px;
-  background: #f22;
-}
-input[type='range']::-webkit-slider-thumb:after {
-  left: 10px;
-  background: #edc;
-}
-
-/* Input range END*/
 
 /* checkbox - START */
 .toggle-control {
